--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=io-task
+#######################################################
+server.port=8080
+server.shutdown=graceful
+#######################################################
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_DB_PORT:3306}/${MYSQL_DB_NAME:io_task}?useUnicode=true;characterEncoding=utf8;characterSetResults=UTF-8;
+spring.datasource.username=${MYSQL_LOGIN:io_task}
+spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+#spring.jpa.show-sql=true
+#######################################################
+#logging.level.root=OFF
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
+#######################################################
+server.error.include-stacktrace=never
+#######################################################
+#logging.level.org.springframework.data.jpa=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
